:recycle: placing new claims endpoint under new authorization apis group
